[package]
name = "content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.87"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
reqwest-wasm = "0.11.16"
serde = { version = "1.0.164", features = ["derive"] }
browser-rpass = { path = "../"}
serde_json = "1.0.96"
yew = {workspace=true}
yewdux = {workspace=true}
log={version="0.4", features=["max_level_trace", "release_max_level_warn"]}
fern ={workspace =true}
gloo={workspace = true}
gloo-utils = { workspace=true, features = ["serde"] }
cfg-if = "0.1"

console_log = {workspace=true, features = ["color"],optional = true}

chrono = { version = "0.4.24", features = ["serde"] }
rand = {workspace=true}
getrandom={workspace=true,features=["js"]}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
uuid = {version="1.4.1",features=["serde","v4"]}
sublime_fuzzy="*"
parking_lot = {workspace=true}




[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Window",
	"Document",
	"HtmlElement",
	"HtmlDocument",
	"HtmlInputElement",
	"HtmlTextAreaElement",
	"Navigator",
	"Clipboard",
	"CssStyleDeclaration",
	"HtmlStyleElement",
	"HtmlCollection",
	"HtmlDataListElement",
	"HtmlOptionElement","DomRect",
]
[features]
default = ["console_log"]
