[package]
name = "content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
wasm-bindgen = {workspace=true}
js-sys = {workspace=true}
wasm-bindgen-futures ={workspace=true}
console_error_panic_hook = {workspace=true}
reqwest-wasm = "0.11.16"
serde = { workspace=true }
browser-rpass = { path = "../"}
serde_json = {workspace=true}
yew = {workspace=true}
yewdux = {workspace=true}
log={workspace=true}
fern ={workspace =true}
gloo={workspace = true}
gloo-utils = { workspace=true }
cfg-if = {workspace=true}

console_log = {workspace=true,optional = true}

chrono = { workspace=true }
rand = {workspace=true}
getrandom={workspace=true}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
uuid = {version="1.4.1",features=["serde","v4"]}
sublime_fuzzy="*"
parking_lot = {workspace=true}




[dependencies.web-sys]
workspace = true
[features]
default = ["console_log"]
