[package]
name = "content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
browser-rpass = { path = "../"}
cfg-if = {workspace=true}
chrono = { workspace=true }
console_error_panic_hook = {workspace=true}
console_log = {workspace=true,optional = true}
fern ={workspace =true}
getrandom={workspace=true}
gloo-utils = { workspace=true }
gloo={workspace = true}
js-sys = {workspace=true}
lazy_static = {workspace=true}
log={workspace=true}
parking_lot = {workspace=true}
rand = {workspace=true}
serde = { workspace=true }
serde_json = {workspace=true}
typetag = {workspace=true}
url = {workspace=true}
uuid = {workspace=true}
wasm-bindgen = {workspace=true}
wasm-bindgen-futures ={workspace=true}
yew = {workspace=true}
yewdux = {workspace=true}
sublime_fuzzy="*"
secrecy={workspace=true}

[dependencies.web-sys]
workspace = true
[features]
default = ["console_log"]
