[package]
name = "native-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rpass={ path = "../.." }
strum = "0.18.0"
strum_macros = "0.18.0"
enum_dispatch="0.3.12"
git2 = "0.17.1"
locale_config = "0.3.0"
wasm-bindgen= {workspace=true}
js-sys = {workspace=true}
wasm-bindgen-futures = {workspace=true}
console_error_panic_hook ={workspace=true}
serde={workspace=true,features = ["derive"]}
serde_json = {workspace=true}
yew = { workspace=true, features = ["csr"] }
chrono = { version = "0.4.24", features = ["serde"] }
gloo={workspace = true}
gloo-utils = { workspace=true, features = ["serde"] }
reqwasm = "0.5.0"
validator = { version = "0.16.0", features = ["derive"] }
yewdux = {workspace=true}
yew-router = {workspace=true}
serde-wasm-bindgen = { workspace =true}
browser-rpass = { path = "../"}
rand = {workspace=true}
getrandom={workspace=true,features=["js"]}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
fern={workspace=true,features=["colored"]}
log={workspace=true}
hex = "0.4.3"
humantime = "2.1.0"

[dependencies.web-sys]
version = "^0.3"
features = [
    "console",
    "Window",
	"Document",
	"HtmlElement",
	"HtmlDocument",
	"HtmlInputElement",
	"HtmlTextAreaElement",
	"Navigator",
	"Clipboard",
]



[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]
[dev-dependencies]
tempfile = "3.5.0"
flate2 = "1.0.26"
tar = "0.4.38"
criterion = "0.4.0"

