[package]
name = "native-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rpass={ path = "../.." }
strum = "0.18.0"
strum_macros = "0.18.0"
enum_dispatch="0.3.12"
git2 = "0.17.1"
locale_config = "0.3.0"
wasm-bindgen= {workspace=true}
console_error_panic_hook ={workspace=true}
serde={workspace=true,features = ["derive"]}
serde_json.workspace = true
chrono = { version = "0.4.24", features = ["serde"] }
browser-rpass = { path = "../"}
rand = {workspace=true}
getrandom={workspace=true,features=["js"]}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
fern={workspace=true,features=["colored"]}
log={workspace=true, features=["max_level_trace", "release_max_level_warn"]}
hex = "0.4.3"
humantime = "2.1.0"
uuid = {version="1.6.1", features = ["v4","macro-diagnostics",]}

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]
[dev-dependencies]
tempfile = "3.5.0"
flate2 = "1.0.26"
tar = "0.4.38"
criterion = "0.4.0"
