[package]
name = "native-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
browser-rpass = { path = "../"}
rpass={ path = "../.." }

strum = {workspace=true}
strum_macros = {workspace=true}
enum_dispatch={workspace=true}
log={workspace=true}
uuid = {workspace=true}
wasm-bindgen= {workspace=true}
console_error_panic_hook ={workspace=true}
serde_json.workspace = true
chrono = { workspace=true }
rand = {workspace=true}
getrandom={workspace=true}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
fern={workspace=true}


git2 = "0.17.1"
locale_config = "0.3.0"
hex = "0.4.3"
humantime = "2.1.0"

serde={workspace=true}

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]
# [dev-dependencies]
# tempfile = "3.5.0"
# flate2 = "1.0.26"
# tar = "0.4.38"
# criterion = "0.4.0"
