[package]
name = "popup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
browser-rpass = { path = "../"}
wasm-bindgen= {workspace=true}
js-sys = {workspace=true}
wasm-bindgen-futures = {workspace=true}
console_error_panic_hook ={workspace=true}
serde_json = {workspace=true}
yew = { workspace=true}
chrono = { workspace=true}
gloo={workspace = true }
gloo-utils = { workspace=true}
yewdux = {workspace=true}
serde-wasm-bindgen = { workspace =true}
rand = {workspace=true}
getrandom={workspace=true}
typetag = {workspace=true}
lazy_static = {workspace=true}
url = {workspace=true}
uuid = {workspace=true}
cfg-if = {workspace=true}
log={workspace=true}
console_log = {workspace=true,optional = true}
parking_lot = {workspace=true}
fern={workspace=true,features=["colored"]}
serde={workspace=true}
secrecy={workspace=true}


sublime_fuzzy="*"
validator = { version = "0.16.0", features = ["derive"] }

[features]
default = ["console_log"]


[dependencies.web-sys]
workspace = true
