[package]
name = "service-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
browser-rpass = { path = "../"}
cfg-if = {workspace=true}
console_error_panic_hook = {workspace=true}
console_log = {workspace=true,optional = true}
enum_dispatch={workspace=true}
fern={workspace=true}
getrandom={workspace=true}
gloo = {workspace=true}
gloo-utils = {workspace=true}
js-sys = {workspace=true}
lazy_static = {workspace=true}
log={workspace=true}
once_cell = {workspace=true}
parking_lot = {workspace=true}
rand = {workspace=true}
serde = {workspace=true}
serde-wasm-bindgen = {workspace=true}
serde_json = {workspace=true}
serde_repr = {workspace=true}
serde_variant = {workspace=true}
strum = {workspace=true}
strum_macros = {workspace=true}
typetag = {workspace=true}
url = {workspace=true}
wasm-bindgen-futures = {workspace=true}
wasm-bindgen= {workspace=true}
yew = {workspace=true}
yewdux = {workspace=true}

[dependencies.web-sys]
workspace = true
[features]
default = ["console_log"]
