[package]
name = "service-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
browser-rpass = { path = "../"}
serde_json = {workspace=true}
serde-wasm-bindgen = {workspace=true}
gloo = {workspace=true}
gloo-utils = {workspace=true}
wasm-bindgen= {workspace=true}
getrandom={workspace=true}
typetag = {workspace=true}
enum_dispatch={workspace=true}
wasm-bindgen-futures = {workspace=true}
js-sys = {workspace=true}
console_error_panic_hook = {workspace=true}
lazy_static = {workspace=true}
serde_repr = {workspace=true}
yewdux = {workspace=true}
yew = {workspace=true}
serde_variant = {workspace=true}
url = {workspace=true}
strum = {workspace=true}
strum_macros = {workspace=true}
once_cell = {workspace=true}
log={workspace=true}
fern={workspace=true,features=["colored"]}
rand = {workspace=true}
web-sys = {workspace=true}
console_log = {workspace=true,optional = true}
cfg-if = {workspace=true}
parking_lot = {workspace=true}
serde = {workspace=true}
secrecy={workspace=true}

[features]
default = ["console_log"]
